--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rahul.patidar\AppData\Local\Temp\testng-eclipse-1626443941\testng-customsuite.xml</span>
+                    <span>C:\Users\rahul.patidar\AppData\Local\Temp\testng-eclipse--1658848872\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="postRequest.GoogleAPI_Add_Delete_place" hash-for-method="add_delete_Place">add_delete_Place</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="deleteRequest.LibraryAPI_E2ETest" hash-for-method="addBook">addBook</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">postRequest.GoogleAPI_Add_Delete_place</span>
+              <span class="class-name">deleteRequest.LibraryAPI_E2ETest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="add_delete_Place">
-                  </a> <!-- add_delete_Place -->
-                  <span class="method-name">add_delete_Place</span>
+                  <a name="addBook">
+                  </a> <!-- addBook -->
+                  <span class="method-name">addBook</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rahul.patidar\AppData\Local\Temp\testng-eclipse-1626443941\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rahul.patidar\AppData\Local\Temp\testng-eclipse--1658848872\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;postRequest.GoogleAPI_Add_Delete_place&quot;/&gt;
+      &lt;class name=&quot;deleteRequest.LibraryAPI_E2ETest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'add_delete_Place')
-data.setCell(0, 2, 'postRequest.GoogleAPI_Add_Delete_place')
-data.setCell(0, 3, 2800);
+data.setCell(0, 1, 'addBook')
+data.setCell(0, 2, 'deleteRequest.LibraryAPI_E2ETest')
+data.setCell(0, 3, 3330);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +221,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">postRequest.GoogleAPI_Add_Delete_place</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">deleteRequest.LibraryAPI_E2ETest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">add_delete_Place</span>
+                <span class="method-name">addBook</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
