--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca61a2">  <td>20/04/05 18:14:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleAPI_Add_Delete_place.add_delete_Place()[pri:0, instance:postRequest.GoogleAPI_Add_Delete_place@124c278f]">add_delete_Place</td> 
+<tr bgcolor="ca61a2">  <td>20/04/06 09:27:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LibraryAPI_E2ETest.addBook()[pri:0, instance:deleteRequest.LibraryAPI_E2ETest@124c278f]">addBook</td> 
   <td>main@1099855928</td>   <td></td> </tr>
 </table>
